@@ -1,5 +1,7 @@
 2016-01-02  Benno Schulenberg  <bensberg@justemail.net>
 	* src/text.c (do_spell, do_formatter): Plug three tiny memory leaks.
+	* src/text.c (do_alt_speller, do_formatter): There is no need here to
+	reinitialize the windows; it will be done when polling the keybuffer.
 
 2015-12-31  Benno Schulenberg  <bensberg@justemail.net>
 	* src/text.c (do_formatter): Restore the cursor position differently.
